<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">Smart Plug 2</string>
    <string name="widget_name">VLC mini player</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_length">Length</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <string name="play">Play</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="append">Append</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="last_playlist">Last playlist</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="info">Information</string>
    <string name="confirm_delete">"Delete the file '%1$s'?"</string>
    <string name="ringtone_set">"The file '%1$s' was set as the ringtone."</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">"Don't show this message again."</string>
    <string name="info_title">VLC</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="internal_memory">Internal memory</string>
    <string name="parent_folder">Up to parent folder</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="directory">Directory</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="mediafiles">Media files</string>
    <string name="notavailable">not available</string>
    <string name="nosubdirectory">No subdirectories.</string>
    <string name="directorynotfound">"The directory path '%1$s' was not found."</string>
    <string name="nohistory">You have no playback history yet.</string>
    <string name="validation">Are you sure?</string>
    <string name="cover_art">Cover art</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat none/single/all</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_horizontal">Fit horizontal</string>
    <string name="surface_fit_vertical">Fit vertical</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitles track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_codec_info">"Codec: %1$s
"</string>
    <string name="track_language_info">"Language: %1$s
"</string>
    <string name="volume">Volume</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="brightness">Brightness</string>
    <string name="track_samplerate_info">"Sample rate: %1$d Hz
"</string>
    <string name="track_resolution_info">"Resolution: %1$dx%2$d
"</string>
    <string name="track_framerate_info">"Frame rate: %1$.3f
"</string>
    <string name="tools">Tools</string>
    <string name="playback_speed">Playback speed</string>
    <string name="sleep_title">Sleep timer</string>
    <string name="sleep_cancel">Cancel sleep timer</string>
    <string name="jump_to_time">Jump to Time</string>
    <string name="subtitle_label">Add subtitle file</string>
    <string name="ok_got_it">Got it, dismiss this</string>
    <string name="playlist_tips">Playlist tips</string>
    <string name="remove_song">Remove song</string>
    <string name="rearrange_order">Rearrange order</string>
    <string name="hold_to_seek">Hold to seek</string>
    <string name="general_prefs_category">General</string>
    <string name="directories_summary">Select directories to include in the media library</string>
    <string name="hardware_acceleration">Hardware Acceleration</string>
    <string name="hardware_acceleration_summary">"Disabled: better stability.
Decoding: may improve performance.
Full: may improve performance further."</string>
    <string name="dev_hardware_decoder">Advanced hardware decoder</string>
    <string name="dev_hardware_decoder_summary">Force hardware decoder, for advanced users only</string>
    <string name="screen_orientation">Video screen orientation</string>
    <string name="enable_black_theme">Enable the black theme</string>
    <string name="enable_black_theme_summary">Change the interface colours for better comfort in low light environments.</string>
    <string name="subtitle_text_encoding">Subtitle text encoding</string>
    <string name="extra_prefs_category">Extra settings</string>
    <string name="interface_prefs_screen">Interface</string>
    <string name="interface_secondary_display_category">Interface - Secondary Display</string>
    <string name="interface_secondary_display_category_summary">Settings when secondary displays are connected (HDMI/Miracast).</string>
    <string name="enable_clone_mode">Prefer clone</string>
    <string name="enable_clone_mode_summary">Clone the device screen without remote control.</string>
    <string name="interface_other_category">Interface - Other</string>
    <string name="enable_brightness_gesture">Enable brightness gesture</string>
    <string name="enable_brightness_gesture_summary">Control brightness by gesture during video playback</string>
    <string name="enable_jump_buttons">Enable jump buttons</string>
    <string name="enable_jump_buttons_summary">Show backward and forward buttons on the video interface</string>
    <string name="audio_title_alignment">Audio title alignment</string>
    <string name="enable_headset_detection">Detect headset</string>
    <string name="enable_headset_detection_summary">Pause on headset removal; resume on headset insertion</string>
    <string name="enable_steal_remote_control">Exclusive headset remote control</string>
    <string name="enable_steal_remote_control_summary">Avoid conflicts by stealing the remote control from other apps. This prevents dialing on double click on HTC phones.</string>
    <string name="performance_prefs_category">Performance</string>
    <string name="chroma_format">Force video chroma</string>
    <string name="chroma_format_summary">"RGB 32-bit: default chroma
RGB 16-bit: better performance but lower quality
YUV: best performance but does not work on all devices. Android 2.3 and later only."</string>
    <string name="deblocking">Deblocking filter settings</string>
    <string name="deblocking_summary">Change the deblocking filter settings. Could improve video quality. Advanced users only.</string>
    <string name="enable_frame_skip">Enable frame skip</string>
    <string name="enable_frame_skip_summary">Speed up decoding but could lower video quality.</string>
    <string name="enable_time_stretching_audio">Time-stretching audio</string>
    <string name="enable_time_stretching_audio_summary">Speed up and slow down audio without changing the pitch (requires a fast device).</string>
    <string name="advanced_prefs_category">Advanced</string>
    <string name="aout">Audio output</string>
    <string name="aout_summary">Change the method that VLC uses to output audio.</string>
    <string name="vout">Video output</string>
    <string name="vout_summary">Change the method that VLC uses to output video.</string>
    <string name="clear_media_db">Clear media database</string>
    <string name="clear_history">Clear search history</string>
    <string name="set_locale">Set locale</string>
    <string name="set_locale_detail">Leave blank to reset</string>
    <string name="network_caching">Network caching value</string>
    <string name="network_caching_summary">The amount of time to buffer network media (in ms). Does not work with hardware decoding. Leave blank to reset.</string>
    <string name="developer_prefs_category">Developer</string>
    <string name="enable_verbose_mode">Verbose</string>
    <string name="enable_verbose_mode_summary">Increase the verbosity (logcat)</string>
    <string name="debug_logs">Debug logs</string>
    <string name="quit">Quit and restart application</string>
    <string name="dump_logcat">Dump logcat log</string>
    <string name="timerset_open">Open</string>
    <string name="timerset_close">Close</string>
    <string name="timerset_set_cancel">Cancel</string>
    <string name="timerset_set_title">Title</string>
    <string name="timerset_set_ok">OK</string>
    <string name="timer_img">timer_img</string>
    <string name="timer_time">09:53</string>
    <string name="timer_repeat_date_text">Repeat week</string>
    <string name="timer_repeat_date_7">7</string>
    <string name="timer_repeat_date_1">1</string>
    <string name="timer_repeat_date_2">2</string>
    <string name="timer_repeat_date_3">3</string>
    <string name="timer_repeat_date_4">4</string>
    <string name="timer_repeat_date_5">5</string>
    <string name="timer_repeat_date_6">6</string>
    <string name="device_electrict">Stats</string>
    <string name="device_wifi">Device WiFi</string>
    <string name="device_protect">Device protect</string>
    <string name="device_yk">Remote control</string>
    <string name="device_timer">Device timer</string>
    <string name="device_delay">Device delay</string>
    <string name="device_slight">Night light</string>
    <string name="reminder_lum_text">Tips</string>
    <string name="worn_now">Currently supported</string>
    <string name="worn_maxa">Maximum current (10A)</string>
    <string name="worn_maxv">Maximum power(2200W)</string>
    <string name="worn_tstext">Using appliance that drains more than 10A or 2200W may cause short circuit and fire.</string>
</resources>