<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/smart_bg" android:background="@drawable/device_gride_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/device_first_margin_top">
        <TextView android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/device_electricty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_electrict" android:drawableTop="@drawable/device_electricty" android:drawablePadding="@dimen/device_drawablepadding" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/device_wifi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_wifi" android:drawableTop="@drawable/device_wifi" android:drawablePadding="@dimen/device_drawablepadding" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/device_protect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_protect" android:drawableTop="@drawable/device_protect" android:drawablePadding="@dimen/device_drawablepadding" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/device_second_margin_top">
        <TextView android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/timelistBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_timer" android:drawableTop="@drawable/device_timer" android:drawablePadding="@dimen/device_drawablepadding" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/delayBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_delay" android:drawableTop="@drawable/device_delay" android:drawablePadding="@dimen/device_drawablepadding" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/device_slight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_slight" android:drawableTop="@drawable/device_slight" android:drawablePadding="@dimen/device_drawablepadding" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black" android:gravity="center_horizontal" android:id="@id/device_yk" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_yk" android:drawableTop="@drawable/device_detail_yk" android:drawablePadding="@dimen/device_drawablepadding" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>