<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/transparent_white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="8.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/playlist_tips" android:layout_weight="2.0" style="@style/TipsFontStyle" />
    <LinearLayout android:gravity="center|left" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove_song" android:drawableLeft="@drawable/ic_gesture_finger_1" style="@style/TipsFontStyle" />
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rearrange_order" android:drawableLeft="@drawable/ic_gesture_finger_2" style="@style/TipsFontStyle" />
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hold_to_seek" android:drawableLeft="@drawable/ic_gesture_finger_3" style="@style/TipsFontStyle" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:textSize="22.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/okgotit_button" android:background="@drawable/button_oval" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok_got_it" />
    </LinearLayout>
    <ImageView android:background="@drawable/img_tips_playlist" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>