<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/timerset_mainbg" android:background="@drawable/mainbg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/open_layout" android:background="@drawable/timer_item_bg_dark" android:layout_width="fill_parent" android:layout_height="@dimen/timer_time_height" android:layout_marginTop="@dimen/timer_margin_top">
        <TextView android:textSize="@dimen/timer_text_text_size" android:textColor="@color/black" android:id="@id/opentext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_10" android:layout_marginRight="@dimen/timer_margin_5" android:text="@string/timerset_open" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/timer_time_text_size" android:textColor="@color/black" android:id="@id/timerset_open_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_5" android:layout_marginRight="@dimen/timer_margin_5" android:text="@string/timer_time" android:layout_toRightOf="@id/opentext" android:layout_centerVertical="true" />
        <com.kankunit.smartplugcronus.customview.SwitchButton android:layout_gravity="center_vertical" android:id="@id/open_timer_switch" android:layout_width="@dimen/timer_switch_width" android:layout_height="@dimen/timer_switch_height" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/close_layout" android:background="@drawable/timer_item_bg_light" android:layout_width="fill_parent" android:layout_height="@dimen/timer_time_height">
        <TextView android:textSize="@dimen/timer_text_text_size" android:textColor="@color/black" android:id="@id/closetext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_10" android:layout_marginRight="@dimen/timer_margin_5" android:text="@string/timerset_close" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/timer_time_text_size" android:textColor="@color/black" android:id="@id/timerset_close_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_5" android:layout_marginRight="@dimen/timer_margin_5" android:text="@string/timer_time" android:layout_toRightOf="@id/closetext" android:layout_centerVertical="true" />
        <com.kankunit.smartplugcronus.customview.SwitchButton android:id="@id/close_timer_switch" android:layout_width="@dimen/timer_switch_width" android:layout_height="@dimen/timer_switch_height" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/timer_text_text_size" android:textColor="@color/black" android:id="@id/repeat_date_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_10" android:layout_marginTop="@dimen/timer_open_layoutmargintop" android:text="@string/timer_repeat_date_text" android:singleLine="true" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/timer_open_layoutmargintop">
        <Button android:textSize="@dimen/timer_repart_size" android:textColor="@color/black" android:id="@id/timer_repeat_date_7" android:background="@drawable/timer_repart_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/buttonminwidth" android:minHeight="@dimen/buttonminheight" android:text="@string/timer_repeat_date_7" />
        <Button android:textSize="@dimen/timer_repart_size" android:textColor="@color/black" android:id="@id/timer_repeat_date_1" android:background="@drawable/timer_repart_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_5" android:minWidth="@dimen/buttonminwidth" android:minHeight="@dimen/buttonminheight" android:text="@string/timer_repeat_date_1" />
        <Button android:textSize="@dimen/timer_repart_size" android:textColor="@color/black" android:id="@id/timer_repeat_date_2" android:background="@drawable/timer_repart_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_5" android:minWidth="@dimen/buttonminwidth" android:minHeight="@dimen/buttonminheight" android:text="@string/timer_repeat_date_2" />
        <Button android:textSize="@dimen/timer_repart_size" android:textColor="@color/black" android:id="@id/timer_repeat_date_3" android:background="@drawable/timer_repart_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_5" android:minWidth="@dimen/buttonminwidth" android:minHeight="@dimen/buttonminheight" android:text="@string/timer_repeat_date_3" />
        <Button android:textSize="@dimen/timer_repart_size" android:textColor="@color/black" android:id="@id/timer_repeat_date_4" android:background="@drawable/timer_repart_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_5" android:minWidth="@dimen/buttonminwidth" android:minHeight="@dimen/buttonminheight" android:text="@string/timer_repeat_date_4" />
        <Button android:textSize="@dimen/timer_repart_size" android:textColor="@color/black" android:id="@id/timer_repeat_date_5" android:background="@drawable/timer_repart_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_5" android:minWidth="@dimen/buttonminwidth" android:minHeight="@dimen/buttonminheight" android:text="@string/timer_repeat_date_5" />
        <Button android:textSize="@dimen/timer_repart_size" android:textColor="@color/black" android:id="@id/timer_repeat_date_6" android:background="@drawable/timer_repart_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_5" android:minWidth="@dimen/buttonminwidth" android:minHeight="@dimen/buttonminheight" android:text="@string/timer_repeat_date_6" />
    </LinearLayout>
    <RelativeLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/timepicker_main" android:background="@drawable/timer_item_bg_dark" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/timer_pickdata_text_height" android:layout_marginTop="@dimen/timer_open_layoutmargintop" android:alpha="0.5">
        <TextView android:textSize="@dimen/timer_text_text_size" android:textColor="@color/black" android:id="@id/timerset_set_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_margin_10" android:text="@string/timerset_set_cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/timer_text_text_size" android:textColor="@color/black" android:id="@id/timerset_set_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timerset_set_title" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/timer_text_text_size" android:textColor="@color/black" android:id="@id/timerset_set_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/timer_margin_20" android:text="@string/timerset_set_ok" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TimePicker android:id="@id/tpPicker" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>