<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:background="@drawable/index_topbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/timer_img" />
    <TextView android:id="@id/center_flag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    <ImageButton android:id="@id/hiddenUpdate" android:background="@drawable/worn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/worn_img_buttom" android:layout_above="@id/now_text" android:layout_centerHorizontal="true" android:contentDescription="@string/timer_img" />
    <TextView android:textSize="@dimen/worn_now_textsize" android:textColor="@color/gray" android:id="@id/now_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/worn_now_textbuttom" android:text="@string/worn_now" android:layout_above="@id/center_flag" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/worn_yellow_textsize" android:textColor="@color/white" android:gravity="center" android:id="@id/now_a" android:background="#ffff8639" android:layout_width="@dimen/worn_yellow_width" android:layout_height="@dimen/worn_yellow_height" android:layout_marginBottom="@dimen/worn_yellow_marginbuttom" android:text="@string/worn_maxa" android:layout_below="@id/now_text" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/worn_yellow_textsize" android:textColor="@color/white" android:gravity="center" android:id="@id/now_v" android:background="#ffff8639" android:layout_width="@dimen/worn_yellow_width" android:layout_height="@dimen/worn_yellow_height" android:layout_marginBottom="@dimen/worn_yellow_marginbuttom" android:text="@string/worn_maxv" android:layout_below="@id/now_a" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/list_none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/now_ts" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/worn_text_size" android:textColor="@color/gray" android:id="@id/worn_text" android:layout_width="@dimen/worn_text_height" android:layout_height="wrap_content" android:layout_marginTop="@dimen/worn_text_margintop" android:text="@string/worn_tstext" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/now_ts" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/reminder_lum_text" android:layout_below="@id/now_v" />
</RelativeLayout>